# ChangeLog for dev-java/bsh
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/bsh/ChangeLog,v 1.50 2008/01/11 06:24:54 wltjr Exp $

  11 Jan 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  -bsh-2.0_beta4-r2.ebuild:
  Removed older version

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  bsh-2.0_beta4-r3.ebuild:
  Stable on ppc, bug #199237.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> bsh-2.0_beta4-r3.ebuild:
  Stable on ppc64; bug #199237

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  bsh-2.0_beta4-r3.ebuild:
  amd64 stable, bug #199237.

  17 Nov 2007; Markus Meier <maekke@gentoo.org> bsh-2.0_beta4-r3.ebuild:
  x86 stable, bug #199237

*bsh-2.0_beta4-r3 (27 May 2007)

  27 May 2007; Vlastimil Babka <caster@gentoo.org> -files/bsh.Console,
  -files/bsh.Interpreter, bsh-2.0_beta4-r2.ebuild, +bsh-2.0_beta4-r3.ebuild:
  Revbump to add proper optional BSF support via USE flag. Cleanup.

*bsh-2.0_beta4-r2 (18 May 2007)

  18 May 2007; Vlastimil Babka <caster@gentoo.org> -bsh-2.0_beta4-r1.ebuild,
  +bsh-2.0_beta4-r2.ebuild:
  Revbump without change to make the removed bsf dep visible in package.env.
  Fixes bug #178142.

  08 May 2007; Vlastimil Babka <caster@gentoo.org> -files/bsh2-build.patch,
  -files/beanshell.desktop, -bsh-1.3.0.ebuild, -bsh-2.0_beta1-r1.ebuild,
  bsh-2.0_beta4-r1.ebuild:
  Remove unused bsf dep; cleanup old versions.

  12 Apr 2007; <welp@gentoo.org> bsh-2.0_beta4-r1.ebuild:
  Stable on amd64 wrt bug 171026

  17 Mar 2007; nixnut <nixnut@gentoo.org> bsh-2.0_beta4-r1.ebuild:
  Stable on ppc wrt bug 171026

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> bsh-2.0_beta4-r1.ebuild:
  Stable on ppc64; bug #171026

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  bsh-2.0_beta4-r1.ebuild:
  stable x86, bug 171026

  14 Mar 2007; Petteri Räty <betelgeuse@gentoo.org> -bsh-2.0_beta4.ebuild:
  Cleanup.

  09 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>