@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/bsh
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/bsh/ChangeLog,v 1.50 2008/01/11 06:24:54 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/bsh/ChangeLog,v 1.51 2008/02/15 04:00:22 betelgeuse Exp $
+
+  15 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
+  bsh-2.0_beta4-r3.ebuild:
+  Use EAPI=1 for slot deps.
 
   11 Jan 2008; William L. Thomson Jr. <wltjr@gentoo.org>
   -bsh-2.0_beta4-r2.ebuild:
